# storage/api-docs/api-docs.json
@@ -132,6 +132,86 @@
                 ]
             }
         },
+        "/api/v1/employee/delete/{id}": {
+            "delete": {
+                "tags": [
+                    "Employee"
+                ],
+                "summary": "Deletar um colaborador",
+                "description": "Exclui um colaborador por ID",
+                "operationId": "a22931d2fbdd149b401ba9df375de33a",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Employee ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Colaborador excluído com sucesso"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Colaborador não encontrado"
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/employee/upload": {
+            "post": {
+                "tags": [
+                    "Employee"
+                ],
+                "summary": "Upload de arquivo de colaboradores",
+                "description": "Faz o upload de um arquivo CSV contendo informações de colaboradores",
+                "operationId": "0e91897c247976b034e2dd32ae7fca8c",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "file": {
+                                        "description": "Arquivo CSV com informações dos colaboradores",
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Arquivo enviado com sucesso"
+                    },
+                    "400": {
+                        "description": "Erro na validação do arquivo"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/login": {
             "post": {
                 "tags": [
